--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -19,7 +19,7 @@
     </div>
     <div>
         <label for="email-su">EMAIL:</label>
-        <input type="text" id="'email-su" />
+        <input type="text" id="email-su" />
     </div>
     <div>
         <label for="userwp-su">WEBPAGE:</label>
