--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,1 +1,24 @@
 <h1>You're now logged in!</h1>
+
+<form class="new-song">
+    <div>
+        <label for="song-title">TITLE:</label>
+        <input type="text" id="song-title" name="song-title"/>
+    </div>
+    <div>
+        <label for="song-artist">ARTIST:</label>
+        <input type="text" id="song-artist" name="song-artist"/>
+    </div>
+    <div>
+        <label for="song-artist-wp">ARTIST'S WEBPAGE:</label>
+        <input type="text" id="song-artist-wp" name="song-artist-wep"/>
+    </div>
+    <div>
+        <label for="song-bpm">BPM:</label>
+        <input type="text" id="song-bpm" name="song-bpm"/>
+    </div>
+    <div>
+        <label for="song-key">KEY:</label>
+        <input type="text" id="song-key" name="song-key"/>
+    </div>
+</form>
