updated routes for profile for user id

--- a/views/partials/song-card.handlebars
+++ b/views/partials/song-card.handlebars
@@ -1,11 +1,13 @@
 <div class="song">
     <div class="artist-title">
         <h1>{{title}}</h1>
-        <a href="{{artist.artist_webpage}}" target="_blank">{{artist.artist_name}}</h2>
+        <a href="{{artist.artist_webpage}}" target="_blank">{{artist.artist_name}}</a>
     </div>
     <div>
-        {{bpm}}
+        {{bpm}} BPM
+        <br>
         {{key}}
+        <br>
         Uploaded by {{user.username}} on {{created_at}}
     </div>
 </div>
