--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Get Tunes</title>
 </head>
 
@@ -12,7 +13,7 @@
     <div>
         <header>
             <h1>
-                <a href="/">Get Tunes</a>
+                <a href="/">Soundiscover</a>
             </h1>
             <nav>
                 <a href="/tracks">TRACKS</a>
