--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,17 +1,20 @@
-<form class="li-form">
-    <div>
-        <label for="email-li">EMAIL:</label>
-        <input type="text" id="email-li" />
+<div class="container-fluid" id="login-con">
+    <div class="row" id="login-row">
+        <form class="li-form">
+            <div class="d-flex flex-column mb-3">
+                <label for="email-li">EMAIL:</label>
+                    <input type="text" id="email-li" />
+            </div>
+            <div class="d-flex flex-column mb-3">
+                <label for="pw-li">PASSWORD:</label>
+                    <input type="password" id="pw-li" />
+            </div>
+            <div>
+                <button class="btn btn-secondary" type="submit">LOGIN</button>
+            </div>
+        </form>
     </div>
-    <div>
-        <label for="pw-li">PASSWORD:</label>
-        <input type="password" id="pw-li" />
-    </div>
-    <div>
-        <button type="submit">LOGIN</button>
-    </div>
-</form>
-
+</div>
 <form class="su-form">
     <div>
         <label for="user-su">USERNAME:</label>
