--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,18 +6,40 @@
     --light-blue: #A6D1E6;
     --navy: #7F5283;
     --dark-gray: #3D3C42;
+    --light-gray: #ECECEC
 }
 
 @font-face {
-    font-family: 'Disfont';
-    src: url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+    font-family: 'Mont';
+    src: url('../fonts/Montserrat-VariableFont_wght.ttf');
 }
 
-nav a{
-    color:var(--navy);
-    font-family: 'Disfont';
+@font-face {
+    font-family:'Oswald';
+    src: url('../fonts/Oswald-VariableFont_wght.ttf');
+}
+
+#Logo-con {
+    font-family: 'Mont';
+    text-align: center;
+    font-size: 50px;
+    background-color: var(--light-gray);
+}
+
+#Logo-con a {
+    color: #9ED2C6;
+}
+
+#Logo-con a:hover {
+    color: var(--light-blue);
     text-decoration: none;
-    
+}
+
+nav a {
+    color:var(--navy);
+    font-family: 'Oswald';
+    text-decoration: none;
+    padding:20px;
 }
 
 nav a:hover {
@@ -25,12 +47,34 @@ nav a:hover {
     text-decoration: none;
 }
 
-body{
-    font-family: 'Disfont';
+body {
+    font-family: 'Oswald';
 }
 
-#login-con{
+#login-con {
     background: var(--light-blue);
     color:var(--navy);
+    font-family: 'Mont';
+    padding:20px;
+    opacity: 95%;
 }
 
+#login-con input {
+    opacity: 60%;
+}
+
+#login-con p {
+    font-style: italic;
+}
+
+#signup-con {
+    background: var(--light-blue);
+    color:var(--navy);
+    font-family: 'Mont';
+    padding:20px 20px 20px 100px;
+    opacity: 95%;
+}
+
+#signup-con input {
+    opacity: 60%;
+}
