--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -78,3 +78,14 @@ body {
 #signup-con input {
     opacity: 60%;
 }
+
+#newsong-con {
+    padding-left: 40px;
+    padding-top: 40px;
+}
+
+footer{
+    text-align: center;
+    padding-top: 50px;
+    font-family: 'Oswald';
+}
