--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Soundiscover</title>
 </head>
 
@@ -24,7 +26,7 @@
                 <a href="/artists">ARTISTS</a>
                 {{#if loggedIn}}
                 <a href="/profile">PROFILE</a>
-                <button id="logout">LOG OUT</button>
+                <button class="btn btn-secondary" id="logout">LOG OUT</button>
                 {{else}}
                 <a href="/login">LOGIN</a>
                 {{/if}}
@@ -34,7 +36,7 @@
             {{{ body }}}
         </main>
         <footer>
-            Get Tunes created by...
+            Soundiscover created by...
         </footer>
     </div>
     {{#if loggedIn}}
