--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,6 +22,7 @@
                 </div>
             </div>
             <nav>
+                <a href="/home">HOME</a>   
                 <a href="/tracks">TRACKS</a>
                 <a href="/artists">ARTISTS</a>
                 {{#if loggedIn}}
