--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,16 +1,7 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col">
-            <p>Hello World</p>
-        </div>
-    </div>
-</div>
-
-
-{{!-- <ul class="track-list">
+<ul class="track-list">
     {{#each songs as |song| }}
     <li>
         {{> song-card song }}
     </li>
     {{/each}}
-</ul> --}}
+</ul>
