--- a/views/discover.handlebars
+++ b/views/discover.handlebars
@@ -4,7 +4,9 @@
             <h1>Who is trending?</h1>
         </div>
         <div class="col-6">
-            <h3> Artist goes here </h3>
+            <ul class="artist-list">
+                <li>{{dj}}</li>
+            </ul>
         </div>
     </div>
 </div>
