mvp accomplished (one bug remaining in artist card area)

--- a/views/uploadsong.handlebars
+++ b/views/uploadsong.handlebars
@@ -1,5 +1,16 @@
 <form class="new-song">
     <div>
+        <label for="artist-select">Choose an Artist:</label>
+        <select name="artist-select" id="artist-select">
+            {{#if artists.length}}
+                <option value="">--Please choose an option--</option>
+                    {{#each artists as |artist|}}
+                        {{> artist-list artist}}
+                    {{/each}}   
+            {{/if}}
+        </select>
+    </div>
+    <div>
         <label for="song-title">TITLE:</label>
         <input type="text" id="song-title" name="song-title"/>
     </div>
