--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,6 +1,6 @@
 <h1>You're now logged in!</h1>
 
-<a href="/artistupload">Upload Artist</a>
+<a href="/uploadartist">Upload Artist</a>
 
 {{!-- 
 <form class="new-song">
