--- a/views/partials/artist-card.handlebars
+++ b/views/partials/artist-card.handlebars
@@ -1,9 +1,7 @@
 <div class="artist">
     <div class="artist-card">
-        <h1>{{artist_name}}</h1>
-        <a href="{{artist_webpage}}" target="_blank">{{artist_webpage}}</a>
+        <h1><a href="{{artist_webpage}}" target="_blank">{{artist_name}}</a></h1>
     </div>
     <div>
-        {{song.title}}
     </div>
 </div>
