--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,6 +1,7 @@
 <h1>You're now logged in!</h1>
 
 <a href="/uploadartist">Upload Artist</a>
+<a href="/uploadsong">Upload A Track</a>
 
 {{!-- 
 <form class="new-song">
