--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,7 @@
             <nav>
                 <a href="/home">HOME</a>   
                 <a href="/tracks">TRACKS</a>
-                <a href="/artists">ARTISTS</a>
+                <a href="/artistpage">ARTISTS</a>
                 {{#if loggedIn}}
                 <a href="/profile">PROFILE</a>
                 <button class="btn btn-secondary" id="logout">LOG OUT</button>
