track to artist route rendered

--- a/views/partials/song-card.handlebars
+++ b/views/partials/song-card.handlebars
@@ -1,7 +1,7 @@
 <div class="song">
     <div class="artist-title">
         <h1>{{title}}</h1>
-        <a href="{{artist.artist_webpage}}" target="_blank">{{artist.artist_name}}</a>
+        <a href="/tracks/artists/{{artist.id}}" target="_blank">{{artist.artist_name}}</a>
     </div>
     <div>
         {{bpm}} BPM
