artists to single artist routes rendered

--- a/views/artists.handlebars
+++ b/views/artists.handlebars
@@ -3,7 +3,7 @@
     <ul>
         {{#each artists as |artist|}}
         <li>
-            {{>artist-card artist}}
+            {{>artist-list-card artist}}
         </li>
         {{/each}}
     </ul>
