--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,16 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/stylesheets/style.css">
-    <title>Get Tunes</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Soundiscover</title>
     
 </head>
 
 <body>
     <div>
         <header>
-            <h1>
-                <a href="/">Get Tunes</a>
-            </h1>
+            <div class="container-fluid" id="Logo-con">
+                <div class="row" id="Logo-row">
+                    <div class="col">
+                        <a class="Logo" href="/">Soundiscover</a>
+                    </div>
+                </div>
+            </div>
             <nav>
                 <a href="/tracks">TRACKS</a>
                 <a href="/artists">ARTISTS</a>
@@ -30,7 +35,7 @@
             {{{ body }}}
         </main>
         <footer>
-            Get Tunes created by...
+            Soundiscover created by...
         </footer>
     </div>
     {{#if loggedIn}}
