one last push before merge

--- a/views/partials/artist-list-card.handlebars
+++ b/views/partials/artist-list-card.handlebars
@@ -1,6 +1,6 @@
 <div class="artist">
     <div class="artist-card">
-        <h1><a href="/tracks/artists/{{id}}" target="_blank">{{artist_name}}</a></h1>
+        <h1><a href="/tracks/artists/{{id}}" target="_self">{{artist_name}}</a></h1>
     </div>
     <div>
         {{#if songs.length}}
