--- a/views/partials/song-card.handlebars
+++ b/views/partials/song-card.handlebars
@@ -1,6 +1,6 @@
 <div class="song">
     <div class="artist-title">
-        <h1>{{title}}</h1>
+        <h4>"{{title}}"</h4>
         <a href="{{artist.artist_webpage}}" target="_blank">{{artist.artist_name}}</a>
     </div>
     <div>
