--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/stylesheets/style.css">
-    <title>Get Tunes</title>
+    <title>Soundiscover</title>
     
 </head>
 
@@ -13,7 +13,7 @@
     <div>
         <header>
             <h1>
-                <a href="/">Get Tunes</a>
+                <a href="/">Soundiscover</a>
             </h1>
             <nav>
                 <a href="/tracks">TRACKS</a>
