--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,3 @@
-<ul class="track-list">
-    {{#each songs as |song| }}
-    <li>
-        {{> song-card song }}
-    </li>
-    {{/each}}
-</ul>
+<div>
+    <h1>{{dj}}</h1>
+</div>
