--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <nav>
-                <a href="/home">HOME</a>   
+                <a href="/">HOME</a>   
                 <a href="/tracks">TRACKS</a>
                 <a href="/discover">ARTISTS</a>
                 {{#if loggedIn}}
